added onClose functionality

--- a/demo/index.html
+++ b/demo/index.html
@@ -55,6 +55,7 @@
             <li><a class="btn grimace" ng-class="theme"  ng-click="displayNotify('grimace')">grimace</a></li>
             <li><a class="btn default" ng-click="displayNotify()">default</a></li>
             <br />
+            <li><a class="btn default" ng-click="displayNotify('onClose')">w/ onClose</a></li>
             <li><a class="btn default" ng-click="displayNotify('html')">w/ HTML</a></li>
             <li><a class="btn default" ng-click="displayNotify('scope')">w/ scope</a></li>
             <!-- <li><a ng-click="dismissNotify()">Dismiss</a></li> -->
